# evraza2.0

./: .gitignore  docker-compose-local.yaml
evraz-frontend/: index.html  package.json
evraz-frontend/src/: App.tsx  testProps.ts
evraz-frontend/src/api/: WebSocketTransceiver.ts  config.ts
evraz-frontend/src/components/: BearingList.tsx  ExhausterIndicator.tsx  ExhausterItem.tsx  ExhausterStatCard.tsx  SinteringMachineCard.tsx
evraz-frontend/src/components/UI/: RightButton.tsx  SvgUiElementGenericCommonAbstractProps.ts  UpArrow.tsx
evraz-frontend/src/context/: TransceiverContext.tsx
evraz-frontend/src/pages/: ExhausterScreen.tsx  MainScreen.tsx  TrendScreen.tsx
evraz_backend/: Cargo.toml  kafkacat.conf
evraz_backend/src/: exgauster.rs  main.rs  mapper.rs
research/: kafka_client.ipynb  kafka_consumer.ipynb
