[package]
name = "evraz_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.25", features = ["dynamic-linking"] }
futures = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
serde_json = "1.0.93"
serde = "1.0.152"
clickhouse = "0.11.2"
tokio-tungstenite = "*"
tungstenite = "0.18.0"
